k8s/app/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: infra-orch-web
  annotations:
    argocd.argoproj.io/ignore-healthcheck: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - infra-orch.example.com
        - dusanserver.webhop.me
      secretName: infra-orch-tls
  rules:
    - host: infra-orch.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: infra-orch-web
                port:
                  number: 80
    - host: dusanserver.webhop.me
      http:
        paths:
          - path: /infra-orch-studio
            pathType: Prefix
            backend:
              service:
                name: infra-orch-web
                port:
                  number: 80
